# cwipi

./: .gitignore  .gitlab-ci.yml  .hgignore  AUTHORS  CMakeCache.txt  CMakeLists.txt  ChangeLog  DEFAULT.yams  DoxygenConfigFortran  INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bft_config_priv.h.in  bftc_config.h.in  build_configure  compil_date.h  config.h.in  config_priv.h.in  configure  configure.ac  cwp.map  cwp_Build.defs.in  cwp_apple.map  cwp_config.h.in  cwp_config_priv.h.in  field.hpp  fvm_config_priv.h.in  fvmc_config.h.in  makefile
Cython/: CMakeLists.txt  Makefile.am  Makefile.in  cwipi.c  cwipi.c.default  cwipi.pyx  cwipi.pyx.in  cwipi_cython.h  cwp.pyx.in  cwp_new_api.pxi  cwp_old_api.pxi  pycwp.pyx.in  pycwpclt.pyx.in  setup.py
Cython/Pypdm/: CMakeLists.txt
Cython/client_server/: pycwp_client_server.pxi  pycwpclt.pyx.in
Cython/cwipi/: CMakeLists.txt  cwipi.pyx.in
Cython/pycwp/: CMakeLists.txt  __init__.py  pycwp.pyx.in
Cython/pycwpclt/: CMakeLists.txt  pycwpclt.pyx.in
Cython/pycwpt/: CMakeLists.txt  __init__.py  pycwpt.pyx.in  setup.py
cython/: CWIPI.c  CWIPI.html  CWIPI.pyx  Makefile.am  Makefile.in  cwipi.c  cwipi.c.default  cwipi.pyx
doc/: CMakeLists.txt  Doxyfile.in  Makefile.am  Makefile.in  mainpage.dox  mainpage.h  page1.dox
doc/sphinx/: Makefile  conf.py.in
highorder/: CMakeLists.txt  test.tec
highorder/Mesh2D/: Trian.mesh
highorder/src/: CMakeLists.txt
spaceBasis/: .gitignore  CMakeLists.txt  Install.txt  NormalizedTetra.mesh
spaceBasis/src/: CMakeLists.txt  LDLt.F90  basePyramid.F90  baseSimplex1D.F90  baseSimplex2D.F90  baseSimplex2D.f90  baseSimplex3D.F90  baseSimplexTools.F90  basesNodales.F90  spacebasis.h  table_tet_mesh.F90
spaceBasis/tests/: CMakeLists.txt  basesNodales.f90  test_Edges00.f90  test_Edges01.f90  test_Edges02.f90  test_Pyramid01.f90  test_Pyramid03.f90  test_Quad00.f90  test_Tetra00.f90  test_Tetra01.f90  test_Triangles00.f90  test_Triangles02.f90
src/: CMakeLists.txt  DistantLocation.cxx  DistantLocation.hxx  LDLt.f90  M_libmesh5_api.f90  M_libmesh6_api.f90  Makefile.am  Makefile.in  applicationProperties.cxx  applicationProperties.hxx  applicationPropertiesDataBase.cxx  applicationPropertiesDataBase.hxx  applicationPropertiesDataBase_i.hxx  basePyramid.F90  basePyramid.f90  baseSimplex1D.F90  baseSimplex1D.f90  baseSimplex2D.F90  baseSimplex2D.f90  baseSimplex3D.f90  baseSimplexTools.f90  baseWedge.f90  basesNodales.F90  basesNodales.f90  callfortinterpfct.f90  codeProperties.cxx  codeProperties.hxx  codePropertiesDB.cxx  codePropertiesDB.hxx  codePropertiesDB_i.hxx  commSeq.cxx  commSeq.hxx  commWithPart.cxx  commWithPart.hxx  commWithoutPart.cxx  commWithoutPart.hxx  communication.cxx  communication.hxx  compile_eos  compile_galibier  (+75 more)
src/bft/: Makefile.am  Makefile.in  bft_backtrace.c  bft_backtrace.cpp  bft_backtrace.h  bft_config_defs.h  bft_error.c  bft_error.h  bft_file.c  bft_file.cpp  bft_file.h  bft_fp_trap.c  bft_fp_trap.cpp  bft_fp_trap.h  bft_mem.c  bft_mem.cpp  bft_mem.h  bft_mem_usage.c  bft_mem_usage.cpp  bft_mem_usage.h  bft_printf.c  bft_printf.h  bft_sys_info.c  bft_sys_info.cpp  bft_sys_info.h  bft_timer.c  bft_timer.cpp  bft_timer.h  bft_version.c  bft_version.cpp  bft_version.h  bftc_backtrace.c  bftc_config_defs.h  bftc_error.c  bftc_mem.c  bftc_mem_usage.c
src/compil/: all_test  confondu  creeMaillagePolygone2D.c  decale  edge_confondu  edge_vertex  gcov_all_test  inside_intersection  polygons  simple_intersection  sin  test  test_all  valgrind_all_test  vertex_confondu  vertex_vertex
src/fortran/: Makefile.am  Makefile.in  callforthointerpfct.f90  callfortlocinterpfct.f90  cwipi_cf.cxx  cwipi_cf.h  cwipi_f.f90  cwipi_printfort_cf.cxx  cwipi_printfort_cf.h  cwp_output_fortran_unit_set.f90  cwp_printfort_cf.cxx  cwp_printfort_cf.h  printfort.f90
src/fvm/: Makefile.am  Makefile.in  fvm_block_dist.c  fvm_block_dist.cpp  fvm_block_dist.h  fvm_block_to_part.c  fvm_block_to_part.cpp  fvm_block_to_part.h  fvm_box.c  fvm_box.cpp  fvm_box.h  fvm_box_priv.h  fvm_box_tree.c  fvm_box_tree.cpp  fvm_box_tree.h  fvm_config_defs.h  fvm_convert_array.c  fvm_convert_array.cpp  fvm_convert_array.h  fvm_coupling.c  fvm_coupling.cpp  fvm_coupling.h  fvm_defs.c  fvm_defs.h  fvm_file.c  fvm_file.h  fvm_gather.c  fvm_gather.cpp  fvm_gather.h  fvm_group.c  fvm_group.cpp  fvm_group.h  fvm_interface.c  fvm_interface.h  fvm_io_num.c  fvm_io_num.h  fvm_locator.c  fvm_locator.h  fvm_morton.c  fvm_morton.h  (+92 more)
src/mesh/: pdm_dist_cloud_surf.c
src/new/: block.cxx  block.hxx  blockCP.cxx  blockCP.hxx  blockFP.cxx  blockFP.hxx  blockHO.cxx  blockHO.hxx  blockStd.cxx  blockStd.hxx  client.c  client.cxx  client.h  client.hxx  codeProperties.cxx  codeProperties.hxx  codePropertiesDB.cxx  codePropertiesDB.hxx  codePropertiesDB_i.hxx  commSeq.cxx  commSeq.hxx  commWithPart.cxx  commWithPart.hxx  commWithoutPart.cxx  commWithoutPart.hxx  communication.cxx  communication.hxx  coupling.cxx  coupling.hxx  couplingDB.cxx  couplingDB.hxx  couplingDB_i.hxx  coupling_i.hxx  cwp.cxx  (+60 more)
tests/: CMakeLists.txt  Makefile.am  Makefile.in  Triangles.mesh  c_client_server_main.c  c_client_server_new_api_c_poly_block.c  c_client_server_new_api_cellface_set_block.c  c_client_server_new_api_deformable.c  c_client_server_new_api_multiple.c  c_client_server_new_api_surf_P1P0_P0P1.c  c_client_server_new_api_variable_mesh.c  c_client_server_new_api_wind_turbine_blade.c  c_ho_palm.c  c_ip_io.c  c_linear_coupling.c  c_linear_location_edgeP2.c  c_mean_value_3D.c  c_new_api.c  c_new_api_avbp.c  c_new_api_c_poly_block.c  c_new_api_cellface_set_block.c  c_new_api_dcube.c  c_new_api_disjoint_comms.c  c_new_api_disjoint_comms_multiblock.c  c_new_api_empty_parts.c  c_new_api_f_poly_block.c  c_new_api_field.c  c_new_api_global_data.c  c_new_api_guinea_pig.c  c_new_api_linear_P1P0_P0P1.c  c_new_api_multiblock.c  c_new_api_multiblock2.c  c_new_api_multiple.c  c_new_api_param.c  c_new_api_part_data.c  c_new_api_part_data2.c  c_new_api_part_data3.c  c_new_api_part_data_two_exch.c  c_new_api_remesh.c  c_new_api_reverse_knn.c  (+131 more)
(+248 files in other folders)
